--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "bootstrap": "^5.3.0",
-    "sass": "^1.63.6"
+    "sass": "^1.63.6",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "laravel-mix": "^6.0.49",
